--- a/workers/work_app/static/css/style.css
+++ b/workers/work_app/static/css/style.css
@@ -24,4 +24,4 @@ th { color: white; font-weight: 800; font-size: 18px}
 #table_category { display: none; }
 #table_human { display: none; }
 
-#edit_form_vacancy, #edit_form_category { display: none; }
+/* #edit_form_vacancy, #edit_form_category, #edit_form_human { display: none; } */
